welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:38: error: expected class or object definition
def faireGrandMotif(){
^PictureMono3:48: error: expected start of definition
override def run() {for(compteur <- 1 to 9){
         ^PictureMono3:53: error: Unmatched closing brace '}' ignored here
}
^